[package]
name = "qu6101a2-mon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.29"
modbus-rtu = { version = "1.3", default-features = false, features = ["master"] }
ratatui = "0.30"
serialport = "4.8"

[lints.clippy]
all = "warn"
pedantic = "warn"
